--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     </div>
 
     <footer>Made with ❤️ in London.</footer>
+    <!-- jQuery Google CDN link -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="index.js" charset="utf-8"></script>
   </body>
 </html>
